fix: satisfy release lint checks